force-app/main/default/objects/ssot__CourseOfferingPtcpResult__dlm/fields/ssot__EvaluatorContactId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EvaluatorContactId__c</fullName>
    <label>Evaluator Contact</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EvaluatorContactId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>