force-app/main/default/objects/ssot__CourseOfferingPtcpResult__dlm/fields/ssot__LetterGradeCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__LetterGradeCode__c</fullName>
    <label>Letter Grade</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LetterGradeCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>