force-app/main/default/objects/ssot__CourseOfferingPtcpResult__dlm/fields/ssot__NumericGradeNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__NumericGradeNumber__c</fullName>
    <label>Numeric Grade</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NumericGradeNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>