force-app/main/default/objects/ssot__CourseOfferingPtcpResult__dlm/fields/ssot__ParticipantResultStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParticipantResultStatus__c</fullName>
    <label>Participant Result Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParticipantResultStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>