force-app/main/default/objects/ssot__CourseOfferingPtcpResult__dlm/fields/ssot__rel_1719820264228_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719820264228_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CourseOfferingPtcpResult_CourseOffer_rel</label>
    <referenceTo>ssot__CourseOfferingParticipant__dlm</referenceTo>
    <relationshipLabel>CourseOfferingPtcpResult_CourseOffer_rel</relationshipLabel>
    <relationshipName>rel_1719820264228_end</relationshipName>
    <type>Lookup</type>
</CustomField>