force-app/main/default/objects/ssot__CourseOfferingPtcpResult__dlm/fields/ssot__UnitsEarnedNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__UnitsEarnedNumber__c</fullName>
    <label>Units Earned</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UnitsEarnedNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>